# Plant-Disease-Detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: configurations.py  dataset.py  models.py  test.py  train.py  utils.py
